pre > code block overflow fix

--- a/armazon/armazon.less
+++ b/armazon/armazon.less
@@ -1,13 +1,8 @@
-/*!
-
- armazon.css v0.2.1 - CSS3 Lightweight Boilerplate Micro Framework based on normalize.css and Skeleton.
- Copyright (c) 2016, Jorge Moreno ( @alterebro )
- MIT License ( https://opensource.org/licenses/MIT )
-
- - Docs : https://git.io/armazon
- - Code : https://github.com/alterebro/armazon.css
-
+/*! armazon.css v0.2.1 - CSS3 Lightweight Boilerplate Micro Framework based on normalize.css and Skeleton.
+ (c) 2016 Jorge Moreno ( @alterebro ) - MIT License
+ https://github.com/alterebro/armazon.css
 */
+
 // --------------------------------------------
 // Variables @less
 @armazon-mobile-breakpoint 		: 580;		// width to filter mobile devices
@@ -175,6 +170,7 @@ code {
 	color: darken(@armazon-color-neutral, 10%);
 }
 pre > code {
+	overflow: auto;
 	display: block;
 	padding: (@armazon-margin / 2);
 	white-space: pre;
