--- a/www/styles/app.css
+++ b/www/styles/app.css
@@ -1,14 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:200,300,400,600,700,900|Inconsolata:400,700);
 @import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
-/*!
-
- armazon.css v0.2.1 - CSS3 Lightweight Boilerplate Micro Framework based on normalize.css and Skeleton.
- Copyright (c) 2016, Jorge Moreno ( @alterebro )
- MIT License ( https://opensource.org/licenses/MIT )
-
- - Docs : https://git.io/armazon
- - Code : https://github.com/alterebro/armazon.css
-
+/*! armazon.css v0.2.1 - CSS3 Lightweight Boilerplate Micro Framework based on normalize.css and Skeleton.
+ (c) 2016 Jorge Moreno ( @alterebro ) - MIT License
+ https://github.com/alterebro/armazon.css
 */
 html,
 body {
@@ -160,6 +154,7 @@ code {
   color: #878787;
 }
 pre > code {
+  overflow: auto;
   display: block;
   padding: 1.5rem;
   white-space: pre;
